--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
     /*height: 100%;*/
     /*overflow: hidden;*/
     /*padding: 0;*/
+    line-height: 2em;
     margin: 0;
 }
 .jumbotron {
@@ -14,16 +15,20 @@ body {
     color: dimgrey;
 }
 
+.hero-banner {
+    padding-top: 70px;
+}
+
 @media only screen and (max-width: 767px) {
    .navigation_header {
-       min-height: 52px;
+       min-height: 18px;
    }
 }
 
 @media only screen and (max-width: 991px) {
    .navigation_header {
        padding: 10px 20px;
-       min-height: 62px;
+       min-height: 28px;
    }
 }
 
@@ -36,30 +41,36 @@ body {
 
 .navigation_header {
     background: #92DBFF;
-    padding: 10px 50px;
+    padding: 12px 10px;
     width: 100%;
-    min-height: 66px;
-    z-index: 1050;
+    min-height: 38px;
     position: fixed;
     left: 0;
     top: 0;
 }
-#header {
-    position: relative;
-    padding: 10px 20px;
-    min-height: 70px;
-}
 
-.wrapper {
-    max-width: 1200px;
+
+
+
+ .wrapper {
+    max-width: 1260px;
     margin: 0 auto;
 }
 
-#main-nav {
-    display: block;
-    text-align: center;
-    margin: 1rem 0 1rem 0;
+.main-nav {
+    background-color: #92DBFF;
+    position: fixed;
+    width: 100%;
+    height: 55px;
+    z-index: 1;
+    /*margin: 0;*/
+    /*min-height: 1px;*/
+    /*display: block;*/
+    /*text-align: center;*/
+    /*margin: 1rem 0 1rem 0;*/
 }
+
+
   .nav>li>a:hover {
    color: black;
   } 
