--- a/css/styles.css
+++ b/css/styles.css
@@ -1,95 +1,71 @@
-* {
-    font-family:'Raleway', sans-serif;
+.navbar {
+    margin-bottom: 0;
 }
 
 
 body {
-    /*height: 100%;*/
-    /*overflow: hidden;*/
-    /*padding: 0;*/
-    line-height: 2em;
-    margin: 0;
+   background: #3E4649;
+   color: #f7f7f7;
+   font-family:'Raleway', sans-serif;
 }
+
+h1, h2 {
+    font-weight: bold;
+}
+
+p {
+    font-size: 16px;
+    color: #cdcdcd;
+}
+
 .jumbotron {
-    background: #92DBFF;
-    color: dimgrey;
+    background: #056082;
+    color: white;
+    text-align: center;
 }
 
-.hero-banner {
-    padding-top: 70px;
+.jumbotron p {
+    color: white;
+    font-size: 26px;
 }
 
-@media only screen and (max-width: 767px) {
-   .navigation_header {
-       min-height: 18px;
-   }
+.navbar-inverse {
+    background: #2E2F31;
+    border: 0;
 }
 
-@media only screen and (max-width: 991px) {
-   .navigation_header {
-       padding: 10px 20px;
-       min-height: 28px;
-   }
+.navbar-inverse .navbar-nav li a {
+    color: #f7f7f7;
+    font-size: 16px;
 }
 
-@media only screen and (max-width: 1024px) {
-   .navigation_header {
-      padding-left: 30px;
-      padding-right: 30px;
-   }
+.navbar-inverse .navbar-nav li a:hover {
+    background: #056082;
 }
 
-.navigation_header {
-    background: #92DBFF;
-    padding: 12px 10px;
-    width: 100%;
-    min-height: 38px;
-    position: fixed;
-    left: 0;
-    top: 0;
+.dropdown-menu {
+    background: #056082;
+    border-radius: 0;
+    border: 0;
 }
 
-
-
-
- .wrapper {
-    max-width: 1260px;
-    margin: 0 auto;
+.dropdown-menu li a {
+    padding: 10px;
 }
 
-.main-nav {
-    background-color: #92DBFF;
-    position: fixed;
-    width: 100%;
-    height: 55px;
-    z-index: 1;
-    /*margin: 0;*/
-    /*min-height: 1px;*/
-    /*display: block;*/
-    /*text-align: center;*/
-    /*margin: 1rem 0 1rem 0;*/
+.navbar-inverse .navbar-nav .dropdown-menu li a:hover {
+    background: #054b82;
 }
 
-
-  .nav>li>a:hover {
-   color: black;
-  } 
- a {
-     color: #000;
- }
- a:hover {
-     color: #FFB692;
- }
-
-  .nav-tabs>li>a:hover {
-    border-color: #FFB692;
+.call-to-action {
+    text-align: center;
 }
 
-.nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
-    background-color: #FFB692;
+.call-to-action p {
+    margin-bottom: 30px;
+    font-family: sans-serif;
 }
 
-.content-b {
-    background: #FFF;
+.glyphicon-large {
+    font-size: 100px;
 }
