--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 
 body {
-   background: #3E4649;
+   background: #777;
    color: #f7f7f7;
    font-family:'Raleway', sans-serif;
 }
@@ -43,6 +43,10 @@ p {
     color: #056082;
 }
 
+a {
+    color: #056082;
+}
+
 .navbar-inverse .navbar-brand {
     color: #ccc;
 }
@@ -75,6 +79,17 @@ p {
 }
 
 .google-map {
-    width: 60%;
-    max-width: 100%;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 60%;
+    position: relative;
+}
+
+.google-map iframe {
+    border: 0;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
