--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,18 @@ p {
     color: #056082;
 }
 
+.navbar-inverse .navbar-brand:hover {
+    color: #056082;
+}
+
 a {
+    transition: color .3s;
     color: #056082;
 }
 
 a:hover {
-    color: #056082;
+    color: #055482;
+    text-decoration: none;
 }
 
 .navbar-inverse .navbar-brand {
@@ -71,6 +77,7 @@ a:hover {
 
 .navbar-inverse .navbar-nav .dropdown-menu li a:hover {
     background: #054b82;
+    transition: color .4s;
 }
 
 .call-to-action {
@@ -128,19 +135,18 @@ a:hover {
 }
 
 .sbtn {
-    padding: 1.05rem 2.75rem;
+    font-size: 12px;
     color: #101010;
     background-color: #fff;
     text-transform: uppercase;
-    border-radius: 10rem;
+    border-radius: 20px;
     transition: color .4s, border .6s;
 }
 
 .sbtn:hover {
-    padding: 1.05rem 2.75rem;
     background-color: #fff;
     color: #056082;
-    border: .1rem solid #056082;
+    border: 1px solid #056082;
 }
 
 .main-footer,
