--- a/css/one.css
+++ b/css/one.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -37,31 +41,38 @@ a {
 }
 
 header h1 {
-    color: white;
+    color: #fff;
     font-size: 2.5em;
     font-weight: 300;
 }
 
 header a {
-    border: 1px solid #e81c4f;
-    border-radius: 290486px;
-    color: white;
+    color: #fff;
     font-size: 0.6em;
     letter-spacing: 0.2em;
     padding: 1em 2em;
     text-transform: uppercase;
     text-decoration: none;
     transition: none 200ms ease-out;
-    transition-property: color, background;
+    transition-property: color;
 }
 
 header a:hover {
-    background: #e81c4f;
-    color: white;
+    color: #dcdcdc;
 }
 
 main {
     margin: 0 auto;
     padding: 4em 1em;
     max-width: 50em;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.nav-links li {
+    display: inline-block;
 }
